--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+html {
+  scroll-behavior: smooth;
+}
+
 
 :root{
   --white: #fff;
